# mix-0.1

./: .gitignore
Documentation/: arch.md
Documentation/.pic/: MIX.vsdx
model/MIX-3D/: 37电机支架.SLDPRT  STM32F103C8T6.SLDASM  万向轮.SLDPRT  上板.dwg  下板.dwg  底板.SLDPRT  电池套板.prt  电池座.SLDPRT  直流电机_MG513P30（P20）-12V（霍尔）.stp.SLDPRT  顶板.SLDPRT
model/MIX-3D/RPLidar_A2M8/: LIDAR.STEP.SLDASM  LIDAR_1.STEP.SLDPRT  LIDAR_2.STEP.SLDPRT
model/MIX-3D/STM32F1/: 2040343-2.step.SLDPRT  Header_L4_10x4.8.step.SLDPRT  Header_Male_1x20x11.6.step.SLDPRT  Header_Male_2x3x11.6.step.SLDPRT  Oscillator_HC-49_S.step.SLDPRT  Oscillator_MC-306.step.SLDPRT  STM32F103C8T6_BluePill_Board.step.SLDPRT  STM32F103C8T6_Blue_Pill v6.step.SLDASM  STM32_LQFP48.step.SLDPRT  Tactile_SMD_5x5mm.step.SLDPRT
movebase/: CMakeLists.txt  movebase.ioc  stm32f103c8tx_flash.ld
movebase/core/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
movebase/core/Src/: main.c  startup_stm32f103xb.s  stm32f1xx_it.c
movebase/rtthread/: rtconfig.h
movebase/rtthread/bsp/: board.c
movebase/src/: crc.c  encoder.c  imu.c  led.c  main.c  motor.c  uart.c  volage.c
movebase/src/include/: icm42688.h  multi.h
navigation/cartographer/: mix.launch  mix.lua
navigation/imu_odom/: CMakeLists.txt  READ.md  package.xml
navigation/imu_odom/launch/: pub.launch
navigation/imu_odom/src/: crc.cc  main.cc  serial.cc  udp.cc
navigation/imu_odom/src/include/: multi.h
navigation/lidar/: rplidar_a2m8.launch
simulation/: README.md
